[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/LobbiesDiscover/LobbiesDiscover.gd" type="Script" id=1]
[ext_resource path="res://ui/LobbiesDiscover/Lobby.tscn" type="PackedScene" id=2]
[ext_resource path="res://tools/Network/Lobbies/LobbiesDiscover.tscn" type="PackedScene" id=3]
[ext_resource path="res://tools/Network/Lobbies/LobbyCreator.tscn" type="PackedScene" id=4]

[node name="LobbiesDiscover" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 924.0
margin_bottom = 500.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 924.0
margin_bottom = 500.0

[node name="Header" type="Control" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 924.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Header"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer/Header/MarginContainer"]
margin_top = 18.0
margin_right = 924.0
margin_bottom = 32.0
text = "Multiplayer"
align = 1
valign = 1

[node name="Lobbies" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 924.0
margin_bottom = 446.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Lobby" parent="VBoxContainer/Lobbies" instance=ExtResource( 2 )]
lobby_name = "Test"

[node name="Lobby2" parent="VBoxContainer/Lobbies" instance=ExtResource( 2 )]
margin_top = 80.0
margin_bottom = 150.0
lobby_name = "Toto"

[node name="Footer" type="Control" parent="VBoxContainer"]
margin_top = 450.0
margin_right = 924.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 50 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Footer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Footer/MarginContainer"]
margin_right = 904.0
margin_bottom = 50.0

[node name="CreateButton" type="Button" parent="VBoxContainer/Footer/MarginContainer/HBoxContainer"]
margin_right = 53.0
margin_bottom = 50.0
text = "Create"

[node name="RefreshButton" type="Button" parent="VBoxContainer/Footer/MarginContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 117.0
margin_bottom = 50.0
text = "Refresh"

[node name="ExitButton" type="Button" parent="VBoxContainer/Footer/MarginContainer/HBoxContainer"]
margin_left = 121.0
margin_right = 161.0
margin_bottom = 50.0
text = "Quit"

[node name="LobbiesDiscover" parent="." instance=ExtResource( 3 )]

[node name="LobbyCreator" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="VBoxContainer/Footer/MarginContainer/HBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Footer/MarginContainer/HBoxContainer/RefreshButton" to="." method="_on_RefreshButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Footer/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="on_update_lobbies" from="LobbiesDiscover" to="." method="_on_LobbiesDiscover_on_update_lobbies"]
